# fightish

./: Cargo.toml
src/: buffer_structs.rs  engine.rs  frame_preprocess.wgsl  lib.rs  main.rs  model.rs  render.rs  scene.rs  shader.wgsl
