[package]
name = "fightish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["rwh_05"]}
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"

pollster = "0.3"
bytemuck = { version = "1.20" , features = ["derive"]}
cgmath = "0.18"